--- a/example/imageToVoxMesh.html
+++ b/example/imageToVoxMesh.html
@@ -22,6 +22,8 @@
     <script src="./lib/OrbitControls.js"></script>
     <script src="./lib/EventDispatcher.js"></script>
     <script src="./lib/Fetcher.js"></script>
+    <script src="./lib/Mathx.js"></script>
+    <script src="./lib/Tree.js"></script>
     <script src="../build/Voxel.js"></script>
     <script src="https://cdn.bootcss.com/dat-gui/0.7.6/dat.gui.js"></script>
     <script>
